ReMade Strategy ver.1.009 (SMA Tested beta update )